mengubah font-family in my calculator

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Calculator</title>
 </head>
 <body>
+
+    <!-- With Table -->
     <section>
         <table class="calculator">
             <tr>
@@ -53,6 +55,20 @@
                 <td style="width: 486px; height: 50px; border-radius: 0 0 20px 20px; background-color: #23806E;"></td>
             </tr>
         </table>
+    </section>
+
+    <!-- Without Table -->
+    <section>
+        <div>
+            <form>
+                <div>
+                    <input type="" name="">
+                </div>
+                <div>
+                    
+                </div>
+            </form>
+        </div>
     </section>
 </body>
 </html>
