--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!-- With Table -->
-    <section>
+    <section class="table">
         <table class="calculator">
             <tr>
                 <td style="display: flex; justify-content: center;">
@@ -59,13 +59,39 @@
 
     <!-- Without Table -->
     <section>
-        <div>
+        <div class="calculatorwithbutton">
             <form>
                 <div>
-                    <input type="" name="">
+                    <input type="text" name="screen">
                 </div>
                 <div>
-                    
+                    <input type="button" value="/">
+                    <input type="button" value="*">
+                    <input type="button" value="-">
+                    <input type="button" value="+">
+                </div>
+                <div>
+                    <input type="button" value="7">
+                    <input type="button" value="8">
+                    <input type="button" value="9">
+                    <input type="button" value="%">
+                </div>
+                <div>
+                    <input type="button" value="4">
+                    <input type="button" value="5">
+                    <input type="button" value="6">
+                    <input type="button" value="DE">
+                </div>
+                <div>
+                    <input type="button" value="1">
+                    <input type="button" value="2">
+                    <input type="button" value="3">
+                    <input type="button" value="AC">
+                </div>
+                <div>
+                    <input type="button" value="0">
+                    <input type="button" value=".">
+                    <input type="button" value="=">
                 </div>
             </form>
         </div>
