--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
 </head>
 <body>
 
+    <!-- Without Table -->
+    <section>
+        <div class="calculatorwithbutton">
+            <form>
+                <div class="div">
+                    <input class="screen" type="text" name="screen">
+                </div>
+                <div class="div">
+                    <input class="button" type="button" value="/">
+                    <input class="button" type="button" value="*">
+                    <input class="button" type="button" value="-">
+                    <input class="button" type="button" value="+">
+                </div>
+                <div class="div">
+                    <input class="button" type="button" value="7">
+                    <input class="button" type="button" value="8">
+                    <input class="button" type="button" value="9">
+                    <input class="button" type="button" value="%">
+                </div>
+                <div class="div">
+                    <input class="button" type="button" value="4">
+                    <input class="button" type="button" value="5">
+                    <input class="button" type="button" value="6">
+                    <input class="button" type="button" value="DE">
+                </div>
+                <div class="div">
+                    <input class="button" type="button" value="1">
+                    <input class="button" type="button" value="2">
+                    <input class="button" type="button" value="3">
+                    <input class="button" type="button" value="AC">
+                </div>
+                <div class="div">
+                    <input class="button" type="button" value="0">
+                    <input class="button" type="button" value=".">
+                    <input class="button double" type="button" value="=">
+                </div>
+            </form>
+        </div>
+    </section>
+
     <!-- With Table -->
     <section class="table">
         <table class="calculator">
@@ -57,44 +97,5 @@
         </table>
     </section>
 
-    <!-- Without Table -->
-    <section>
-        <div class="calculatorwithbutton">
-            <form>
-                <div>
-                    <input type="text" name="screen">
-                </div>
-                <div>
-                    <input type="button" value="/">
-                    <input type="button" value="*">
-                    <input type="button" value="-">
-                    <input type="button" value="+">
-                </div>
-                <div>
-                    <input type="button" value="7">
-                    <input type="button" value="8">
-                    <input type="button" value="9">
-                    <input type="button" value="%">
-                </div>
-                <div>
-                    <input type="button" value="4">
-                    <input type="button" value="5">
-                    <input type="button" value="6">
-                    <input type="button" value="DE">
-                </div>
-                <div>
-                    <input type="button" value="1">
-                    <input type="button" value="2">
-                    <input type="button" value="3">
-                    <input type="button" value="AC">
-                </div>
-                <div>
-                    <input type="button" value="0">
-                    <input type="button" value=".">
-                    <input type="button" value="=">
-                </div>
-            </form>
-        </div>
-    </section>
 </body>
 </html>
