--- a/index.html
+++ b/index.html
@@ -11,38 +11,38 @@
     <!-- Without Table -->
     <section>
         <div class="calculatorwithbutton">
-            <form>
+            <form class="calculatorwithouttable">
                 <div class="div">
                     <input class="screen" type="text" name="screen">
                 </div>
                 <div class="div">
-                    <input class="button" type="button" value="/">
-                    <input class="button" type="button" value="*">
-                    <input class="button" type="button" value="-">
-                    <input class="button" type="button" value="+">
+                    <input class="button code" type="button" value="/">
+                    <input class="button code" type="button" value="*">
+                    <input class="button code" type="button" value="-">
+                    <input class="button code" type="button" value="+">
                 </div>
                 <div class="div">
-                    <input class="button" type="button" value="7">
-                    <input class="button" type="button" value="8">
-                    <input class="button" type="button" value="9">
-                    <input class="button" type="button" value="%">
+                    <input class="button value" type="button" value="7">
+                    <input class="button value" type="button" value="8">
+                    <input class="button value" type="button" value="9">
+                    <input class="button code" type="button" value="%">
                 </div>
                 <div class="div">
-                    <input class="button" type="button" value="4">
-                    <input class="button" type="button" value="5">
-                    <input class="button" type="button" value="6">
-                    <input class="button" type="button" value="DE">
+                    <input class="button value" type="button" value="4">
+                    <input class="button value" type="button" value="5">
+                    <input class="button value" type="button" value="6">
+                    <input class="button type" type="button" value="DE">
                 </div>
                 <div class="div">
-                    <input class="button" type="button" value="1">
-                    <input class="button" type="button" value="2">
-                    <input class="button" type="button" value="3">
-                    <input class="button" type="button" value="AC">
+                    <input class="button value" type="button" value="1">
+                    <input class="button value" type="button" value="2">
+                    <input class="button value" type="button" value="3">
+                    <input class="button type" type="button" value="AC">
                 </div>
                 <div class="div">
-                    <input class="button" type="button" value="0">
-                    <input class="button" type="button" value=".">
-                    <input class="button double" type="button" value="=">
+                    <input class="button value" type="button" value="0">
+                    <input class="button value" type="button" value=".">
+                    <input class="button double code" type="button" value="=">
                 </div>
             </form>
         </div>
