decided to use the calculator button design

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Calculator</title>
 </head>
 <body>
-
-    <!-- Without Table -->
     <section>
         <div class="calculatorwithbutton">
             <form class="calculatorwithouttable">
@@ -16,86 +14,36 @@
                     <input class="screen" type="text" name="screen">
                 </div>
                 <div class="div">
-                    <input class="button code" type="button" value="/">
-                    <input class="button code" type="button" value="*">
-                    <input class="button code" type="button" value="-">
-                    <input class="button code" type="button" value="+">
+                    <input class="button type" type="button" value="AC">
+                    <input class="button type" type="button" value="←">
+                    <input class="button code" type="button" value="%">
+                    <input class="button code" type="button" value="÷">
                 </div>
                 <div class="div">
                     <input class="button value" type="button" value="7">
                     <input class="button value" type="button" value="8">
                     <input class="button value" type="button" value="9">
-                    <input class="button code" type="button" value="%">
+                    <input class="button code" type="button" value="*">
                 </div>
                 <div class="div">
                     <input class="button value" type="button" value="4">
                     <input class="button value" type="button" value="5">
                     <input class="button value" type="button" value="6">
-                    <input class="button type" type="button" value="DE">
+                    <input class="button code" type="button" value="-">
                 </div>
                 <div class="div">
                     <input class="button value" type="button" value="1">
                     <input class="button value" type="button" value="2">
                     <input class="button value" type="button" value="3">
-                    <input class="button type" type="button" value="AC">
+                    <input class="button code" type="button" value="+">
                 </div>
                 <div class="div">
-                    <input class="button value" type="button" value="0">
                     <input class="button value" type="button" value=".">
-                    <input class="button double code" type="button" value="=">
+                    <input class="button value" type="button" value="0">
+                    <input class="button double" type="button" value="=">
                 </div>
             </form>
         </div>
     </section>
-
-    <!-- With Table -->
-    <section class="table">
-        <table class="calculator">
-            <tr>
-                <td style="display: flex; justify-content: center;">
-                    <div class="display">
-                        <span style="display: flex; justify-content: center;"></span>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td class="td" style="background-color: #2CA089;">
-                    <div>
-                        <span class="nilai">/</span>
-                        <span class="nilai">*</span>
-                        <span class="nilai">-</span>
-                        <span class="nilai">+</span>
-                    </div>
-                    <div>
-                        <span class="nilai">7</span>
-                        <span class="nilai">8</span>
-                        <span class="nilai">9</span>
-                        <span class="nilai">%</span>
-                    </div>
-                    <div>
-                        <span class="nilai">4</span>
-                        <span class="nilai">5</span>
-                        <span class="nilai">6</span>
-                        <span class="text">DE</span>
-                    </div>
-                    <div>
-                        <span class="nilai">1</span>
-                        <span class="nilai">2</span>
-                        <span class="nilai">3</span>
-                        <span class="text">AC</span>
-                    </div>
-                    <div>
-                        <span class="nilai">0</span>
-                        <span class="nilai">.</span>
-                        <span class="nilai pointer">=</span>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td style="width: 486px; height: 50px; border-radius: 0 0 20px 20px; background-color: #23806E;"></td>
-            </tr>
-        </table>
-    </section>
-
 </body>
 </html>
