minor update design

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <section>
-        <div class="calculatorwithbutton">
-            <form class="calculatorwithouttable">
-                <div class="div">
+        <div class="calculatorbody">
+            <form class="calculator">
+                <div class="div" style="padding-top: 20px;">
                     <input class="screen" type="text" name="screen">
                 </div>
                 <div class="div">
-                    <input class="button type" type="button" value="AC">
-                    <input class="button type" type="button" value="←">
+                    <input class="button text" type="button" value="AC">
+                    <input class="button text" type="button" value="←">
                     <input class="button code" type="button" value="%">
                     <input class="button code" type="button" value="÷">
                 </div>
@@ -37,10 +37,10 @@
                     <input class="button value" type="button" value="3">
                     <input class="button code" type="button" value="+">
                 </div>
-                <div class="div">
+                <div class="div" style="padding-bottom: 20px;">
                     <input class="button value" type="button" value=".">
                     <input class="button value" type="button" value="0">
-                    <input class="button double" type="button" value="=">
+                    <input class="button equal" type="button" value="=">
                 </div>
             </form>
         </div>
