repair btnPoint and add error screen

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="div" style="padding-bottom: 20px;">
                     <input class="button value" type="button" value="( )" onclick="btnSymbolTest()"/>
                     <input class="button value" type="button" value="." onclick="btnPoint('.')"/>
-                    <input class="button value" type="button" value="0" onclick="btnNumb(0)"/>
+                    <input class="button value" type="button" value="0" onclick="btnZero(0)"/>
                     <input class="button equal" type="button" value="=" onclick="equal()"/>
                 </div>
             </form>
