update function btnSymbol, btnPoint

--- a/index.html
+++ b/index.html
@@ -23,39 +23,39 @@
                     <output class="output" id="result" name="result">0</output>
                 </div>
                 <div class="div">
-                    <input class="button text" type="button" value="AC" onclick="AC()"/>
-                    <input class="button text" type="button" value="←" onclick="Del()"/>
-                    <input class="button code" type="button" value="%" onclick="btnSymbol('%')"/>
-                    <input class="button code" type="button" value="/" onclick="btnSymbol('/')"/>
+                    <input class="button text" type="button" value="AC" onclick="AC()" />
+                    <input class="button text" type="button" value="←" onclick="Del()" />
+                    <input class="button code" type="button" value="%" onclick="btnSymbol('%')" />
+                    <input class="button code" type="button" value="/" onclick="btnSymbol('/')" />
                 </div>
                 <div class="div">
-                    <input class="button value" type="button" value="7" onclick="btnNumb(7)"/>
-                    <input class="button value" type="button" value="8" onclick="btnNumb(8)"/>
-                    <input class="button value" type="button" value="9" onclick="btnNumb(9)"/>
-                    <input class="button code" type="button" value="*" onclick="btnSymbol('*')"/>
+                    <input class="button value" type="button" value="7" onclick="btnNumb(7)" />
+                    <input class="button value" type="button" value="8" onclick="btnNumb(8)" />
+                    <input class="button value" type="button" value="9" onclick="btnNumb(9)" />
+                    <input class="button code" type="button" value="*" onclick="btnSymbol('*')" />
                 </div>
                 <div class="div">
-                    <input class="button value" type="button" value="4" onclick="btnNumb(4)"/>
-                    <input class="button value" type="button" value="5" onclick="btnNumb(5)"/>
-                    <input class="button value" type="button" value="6" onclick="btnNumb(6)"/>
-                    <input class="button code" type="button" value="-" onclick="btnSymbol('-')"/>
+                    <input class="button value" type="button" value="4" onclick="btnNumb(4)" />
+                    <input class="button value" type="button" value="5" onclick="btnNumb(5)" />
+                    <input class="button value" type="button" value="6" onclick="btnNumb(6)" />
+                    <input class="button code" type="button" value="-" onclick="btnSymbol('-')" />
                 </div>
                 <div class="div">
-                    <input class="button value" type="button" value="1" onclick="btnNumb(1)"/>
-                    <input class="button value" type="button" value="2" onclick="btnNumb(2)"/>
-                    <input class="button value" type="button" value="3" onclick="btnNumb(3)"/>
-                    <input class="button code" type="button" value="+" onclick="btnSymbol('+')"/>
+                    <input class="button value" type="button" value="1" onclick="btnNumb(1)" />
+                    <input class="button value" type="button" value="2" onclick="btnNumb(2)" />
+                    <input class="button value" type="button" value="3" onclick="btnNumb(3)" />
+                    <input class="button code" type="button" value="+" onclick="btnSymbol('+')" />
                 </div>
                 <div class="div" style="padding-bottom: 25px;">
-                    <input class="button value" type="button" value="( )" onclick="btnSymbolTest()"/>
-                    <input class="button value" type="button" value="." onclick="btnPoint('.')"/>
-                    <input class="button value" type="button" value="0" onclick="btnZero(0)"/>
-                    <input class="button equal" type="button" value="=" onclick="equal()"/>
+                    <input class="button value" type="button" value="" onclick="btnPlusMinus()" />
+                    <input class="button value" type="button" value="." onclick="btnPoint('.')" />
+                    <input class="button value" type="button" value="0" onclick="btnZero(0)" />
+                    <input class="button equal" type="button" value="=" onclick="equal()" />
                 </div>
             </form>
         </div>
     </section>
-    
+
     <!-- <section>
         <div class="calculatorbody">
             <form class="calculator">
