add btnPlusMinus and theri function, repair btnSymbol

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <input class="button code" type="button" value="+" onclick="btnSymbol('+')" />
                 </div>
                 <div class="div" style="padding-bottom: 25px;">
-                    <input class="button value" type="button" value="" onclick="btnPlusMinus()" />
+                    <input class="button value" type="button" value="+/-" onclick="btnPlusMinus()" />
                     <input class="button value" type="button" value="." onclick="btnPoint('.')" />
                     <input class="button value" type="button" value="0" onclick="btnZero(0)" />
                     <input class="button equal" type="button" value="=" onclick="equal()" />
