--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
                     <input class="button code" type="button" value="/" onclick="btnSymbol('/')" />
                 </div>
                 <div class="div">
-                    <input class="button value" type="button" value="7" onclick="btnNumb(7)" />
-                    <input class="button value" type="button" value="8" onclick="btnNumb(8)" />
-                    <input class="button value" type="button" value="9" onclick="btnNumb(9)" />
+                    <input class="button value number" type="button" value="7" onclick="btnNumb(7)" />
+                    <input class="button value number" type="button" value="8" onclick="btnNumb(8)" />
+                    <input class="button value number" type="button" value="9" onclick="btnNumb(9)" />
                     <input class="button code" type="button" value="*" onclick="btnSymbol('*')" />
                 </div>
                 <div class="div">
-                    <input class="button value" type="button" value="4" onclick="btnNumb(4)" />
-                    <input class="button value" type="button" value="5" onclick="btnNumb(5)" />
-                    <input class="button value" type="button" value="6" onclick="btnNumb(6)" />
+                    <input class="button value number" type="button" value="4" onclick="btnNumb(4)" />
+                    <input class="button value number" type="button" value="5" onclick="btnNumb(5)" />
+                    <input class="button value number" type="button" value="6" onclick="btnNumb(6)" />
                     <input class="button code" type="button" value="-" onclick="btnSymbol('-')" />
                 </div>
                 <div class="div">
-                    <input class="button value" type="button" value="1" onclick="btnNumb(1)" />
-                    <input class="button value" type="button" value="2" onclick="btnNumb(2)" />
-                    <input class="button value" type="button" value="3" onclick="btnNumb(3)" />
+                    <input class="button value number" type="button" value="1" onclick="btnNumb(1)" />
+                    <input class="button value number" type="button" value="2" onclick="btnNumb(2)" />
+                    <input class="button value number" type="button" value="3" onclick="btnNumb(3)" />
                     <input class="button code" type="button" value="+" onclick="btnSymbol('+')" />
                 </div>
                 <div class="div" style="padding-bottom: 25px;">
                     <input class="button value" type="button" value="+/-" onclick="btnPlusMinus()" />
                     <input class="button value" type="button" value="." onclick="btnPoint('.')" />
-                    <input class="button value" type="button" value="0" onclick="btnZero(0)" />
+                    <input class="button value zero" type="button" value="0" onclick="btnZero(0)" />
                     <input class="button equal" type="button" value="=" onclick="equal()" />
                 </div>
             </form>
